Add product & own-brands sections and adaptive; fix layout

--- a/index.html
+++ b/index.html
@@ -14,38 +14,44 @@
 <body>
     <div class="mobile__overlay" data-js-header-overlay>
         <nav class="mobile__menu" aria-label="Мобильное меню">
-            <ul class="mobile__menu-list">
-                <li class="mobile__menu-item"><a href="" class="mobile__menu-link">О компании</a></li>
-                <li class="mobile__menu-item"><a href="" class="mobile__menu-link">Контрактное производство</a>
-                    <ul class="mobile__submenu-list">
-                        <li class="mobile__submenu-item"><a href="" class="mobile__submenu-link">Автомобильная химия</a>
-                        </li>
-                        <li class="mobile__submenu-item"><a href="" class="mobile__submenu-link">Бытовая химия</a>
-                        </li>
-                        <li class="mobile__submenu-item"><a href="" class="mobile__submenu-link">Дезинфицирующие
-                                средства</a>
-                        </li>
-                        <li class="mobile__submenu-item"><a href="" class="mobile__submenu-link">Пищевые аэрозоли</a>
-                        </li>
-                        <li class="mobile__submenu-item"><a href="" class="mobile__submenu-link">Косметическая
-                                продукция</a>
-                        </li>
-                        <li class="mobile__submenu-item"><a href="" class="mobile__submenu-link">Краски аэрозольные</a>
-                        </li>
-                    </ul>
-                </li>
-                <li class="mobile__menu-item"><a href="" class="mobile__menu-link">Собственные марки</a>
-                    <ul class="mobile__submenu-list">
-                        <li class="mobile__submenu-item"><a href="" class="mobile__submenu-link">Автохимия AG-Tech</a>
-                        </li>
-                        <li class="mobile__submenu-item"><a href="" class="mobile__submenu-link">Автохимия AP</a>
-                        </li>
+            <div class="mobile__menu-inner">
+                <ul class="mobile__menu-list">
+                    <li class="mobile__menu-item"><a href="" class="mobile__menu-link">О компании</a></li>
+                    <li class="mobile__menu-item"><a href="" class="mobile__menu-link">Контрактное производство</a>
+                        <ul class="mobile__submenu-list">
+                            <li class="mobile__submenu-item"><a href="" class="mobile__submenu-link">Автомобильная
+                                    химия</a>
+                            </li>
+                            <li class="mobile__submenu-item"><a href="" class="mobile__submenu-link">Бытовая химия</a>
+                            </li>
+                            <li class="mobile__submenu-item"><a href=""
+                                    class="mobile__submenu-link">Дезинфицирующие&nbsp;средства</a>
+                            </li>
+                            <li class="mobile__submenu-item"><a href="" class="mobile__submenu-link">Пищевые
+                                    аэрозоли</a>
+                            </li>
+                            <li class="mobile__submenu-item"><a href="" class="mobile__submenu-link">Косметическая
+                                    продукция</a>
+                            </li>
+                            <li class="mobile__submenu-item"><a href="" class="mobile__submenu-link">Краски
+                                    аэрозольные</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="mobile__menu-item"><a href="" class="mobile__menu-link">Собственные марки</a>
+                        <ul class="mobile__submenu-list">
+                            <li class="mobile__submenu-item"><a href="" class="mobile__submenu-link">Автохимия
+                                    AG-Tech</a>
+                            </li>
+                            <li class="mobile__submenu-item"><a href="" class="mobile__submenu-link">Автохимия AP</a>
+                            </li>
 
-                    </ul>
-                </li>
-                <li class="mobile__menu-item"><a href="" class="mobile__menu-link">Новости</a></li>
-                <li class="mobile__menu-item"><a href="" class="mobile__menu-link">Контакты</a></li>
-            </ul>
+                        </ul>
+                    </li>
+                    <li class="mobile__menu-item"><a href="" class="mobile__menu-link">Новости</a></li>
+                    <li class="mobile__menu-item"><a href="" class="mobile__menu-link">Контакты</a></li>
+                </ul>
+            </div>
             <hr class="mobile__separator">
             <footer class="mobile__menu-footer">
                 <a class="mobile__menu-phone" href="tel:+74996861014">+7 (499) 686-10-14</a>
@@ -167,63 +173,161 @@
     <main>
         <section class="section section--light">
             <div class="container">
-                <div class="steps__inner">
-                    <div class="separator"></div>
-                    <h2 class="section__title">схема работы</h2>
 
-                    <div class="steps__list swiper__steps">
-                        <div class="swiper-wrapper">
-                            <div class="steps__item swiper-slide">
-                                <span class="steps__num">01</span>
-                                <div class="steps__content">
-                                    <h3 class="steps__title">Знакомство</h3>
-                                    <p class="steps__text">Безусловно, сплочённость команды профессионалов позволяет
-                                        оценить
-                                        значение форм воздействия.</p>
-                                    <a href="./" class="steps__link">Оставить заявку</a>
-                                </div>
-                            </div>
-                            <div class="steps__item swiper-slide">
-                                <span class="steps__num">02</span>
-                                <div class="steps__content">
-                                    <h3 class="steps__title">Заключение<br>договора</h3>
-                                    <p class="steps__text">Лишь интерактивные прототипы призваны к ответу.</p>
-                                </div>
-                            </div>
-                            <div class="steps__item swiper-slide">
-                                <span class="steps__num">03</span>
-                                <div class="steps__content">
-                                    <h3 class="steps__title">Производство</h3>
-                                    <p class="steps__text">А также стремящиеся вытеснить традиционное производство,
-                                        нанотехнологии
-                                        функционально разнесены на независимые элементы.</p>
-                                </div>
-                            </div>
-                            <div class="steps__item swiper-slide">
-                                <span class="steps__num">04</span>
-                                <div class="steps__content">
-                                    <h3 class="steps__title">Доставка</h3>
-                                    <p class="steps__text">В частности, экономическая повестка сегодняшнего дня говорит
-                                        о
-                                        возможностях приоритизации разума над эмоциями.</p>
-                                </div>
+                <div class="separator"></div>
+                <h2 class="section__title">схема работы</h2>
+
+                <div class="steps__list swiper__steps">
+                    <div class="swiper-wrapper">
+                        <div class="steps__item swiper-slide">
+                            <span class="steps__num">01</span>
+                            <div class="steps__content">
+                                <h3 class="steps__title">Знакомство</h3>
+                                <p class="steps__text">Безусловно, сплочённость команды профессионалов позволяет
+                                    оценить
+                                    значение форм воздействия.</p>
+                                <a href="./" class="steps__link">Оставить заявку</a>
                             </div>
                         </div>
-                    </div>
-                    <!-- If we need navigation buttons -->
-                    <div class="slider__steps-buttons">
-                        <div class="slider__steps-button--prev">
-                            <svg width="30" height="20">
-                                <use href="./images/sprites.svg#arrow-prev"></use>
-                            </svg>
+                        <div class="steps__item swiper-slide">
+                            <span class="steps__num">02</span>
+                            <div class="steps__content">
+                                <h3 class="steps__title">Заключение<br>договора</h3>
+                                <p class="steps__text">Лишь интерактивные прототипы призваны к ответу.</p>
+                            </div>
                         </div>
-                        <div class="slider__steps-button--next">
-                            <svg width="30" height="20">
-                                <use href="./images/sprites.svg#arrow-next"></use>
-                            </svg>
+                        <div class="steps__item swiper-slide">
+                            <span class="steps__num">03</span>
+                            <div class="steps__content">
+                                <h3 class="steps__title">Производство</h3>
+                                <p class="steps__text">А также стремящиеся вытеснить традиционное производство,
+                                    нанотехнологии
+                                    функционально разнесены на независимые элементы.</p>
+                            </div>
+                        </div>
+                        <div class="steps__item swiper-slide">
+                            <span class="steps__num">04</span>
+                            <div class="steps__content">
+                                <h3 class="steps__title">Доставка</h3>
+                                <p class="steps__text">В частности, экономическая повестка сегодняшнего дня говорит
+                                    о
+                                    возможностях приоритизации разума над эмоциями.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
+                <!-- If we need navigation buttons -->
+                <div class="slider__steps-buttons">
+                    <div class="slider__steps-button--prev">
+                        <svg width="30" height="20">
+                            <use href="./images/sprites.svg#arrow-prev"></use>
+                        </svg>
+                    </div>
+                    <div class="slider__steps-button--next">
+                        <svg width="30" height="20">
+                            <use href="./images/sprites.svg#arrow-next"></use>
+                        </svg>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+        <section class="section production">
+            <div class="container">
+                <div class="separator"></div>
+                <h2 class="section__title">Контрактное производство</h2>
+                <ul class="card__list">
+                    <li class="card__item card__item--product">
+                        <div class="card__body">
+                            <h3 class="card__title">Автомобильная химия</h3>
+                            <p class="card__description">Безусловно, сплочённость команды профессионалов позволяет
+                                оценить
+                                значение форм воздействия.</p>
+                        </div>
+                        <img class="card__image" src="./images/cards-image/1.png" alt="Автомобильная химия" width="478"
+                            height="300">
+                    </li>
+                    <li class="card__item card__item--product">
+                        <div class="card__body">
+                            <h3 class="card__title">Бытовая химия</h3>
+                            <p class="card__description">А также стремящиеся вытеснить традиционное производство,
+                                нанотехнологии функционально разнесены на независимые элементы.</p>
+                        </div>
+                        <img class="card__image" src="./images/cards-image/2.png" alt="Бытовая химия" width="478"
+                            height="300">
+                    </li>
+                    <li class="card__item card__item--product">
+                        <div class="card__body">
+                            <h3 class="card__title">Дезинфицирующие средства</h3>
+                            <p class="card__description">Лишь интерактивные прототипы призваны к ответу.</p>
+                        </div>
+                        <img class="card__image" src="./images/cards-image/3.png" alt="Дезинфицирующие средства"
+                            width="478" height="300">
+                    </li>
+                    <li class="card__item card__item--product">
+                        <div class="card__body">
+                            <h3 class="card__title">Пищевые аэрозоли</h3>
+                            <p class="card__description">Безусловно, сплочённость команды профессионалов позволяет
+                                оценить
+                                значение форм воздействия.</p>
+                        </div>
+                        <img class="card__image" src="./images/cards-image/3.png" alt="Пищевые аэрозоли" width="478"
+                            height="300">
+                    </li>
+                    <li class="card__item card__item--product">
+                        <div class="card__body">
+                            <h3 class="card__title">Косметическая продукция</h3>
+                            <p class="card__description">Лишь интерактивные прототипы призваны к ответу.</p>
+                        </div>
+                        <img class="card__image" src="./images/cards-image/4.png" alt="Косметическая продукция"
+                            width="478" height="300">
+                    </li>
+                    <li class="card__item card__item--product">
+                        <div class="card__body">
+                            <h3 class="card__title">Краски аэрозольные</h3>
+                            <p class="card__description">А также стремящиеся вытеснить традиционное производство,
+                                нанотехнологии функционально разнесены на независимые элементы.</p>
+                        </div>
+                        <img class="card__image" src="./images/cards-image/5.png" alt="Краски аэрозольные" width="478"
+                            height="300">
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="section own-brands">
+            <div class="container">
+                <div class="separator"></div>
+                <h2 class="section__title">собственные марки</h2>
+                <ul class="card__list">
+                    <li class="card__item card__item--brands">
+                        <svg class="hhh" width="140" height="121">
+                            <use href="./images/sprites.svg#10"></use>
+                        </svg>
+
+                        <div class="card__body--brands">
+                            <h3 class="card__title">Автохимия AG-Tech</h3>
+                            <p class="card__description">Для современного мира разбавленное изрядной долей эмпатии,
+                                рациональное мышление создаёт предпосылки для поставленных обществом задач.</p>
+                        </div>
+                    </li>
+                    <li class="card__item card__item--brands">
+                        <svg class="hhh" width="140" height="121">
+                            <use href="./images/sprites.svg#11"></use>
+                        </svg>
+                        <div class="card__body--brands">
+                            <h3 class="card__title">Автохимия AP</h3>
+                            <p class="card__description">Для современного мира разбавленное изрядной долей эмпатии,
+                                рациональное мышление создаёт предпосылки для поставленных обществом задач.</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
+         <section class="section">
+            <div class="container">
+                <div class="separator"></div>
+             
+
             </div>
         </section>
     </main>
