--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                 <h2 class="section__title">собственные марки</h2>
                 <ul class="card__list">
                     <li class="card__item card__item--brands">
-                        <svg class="hhh" width="140" height="121">
+                        <svg class="card__logo" width="140" height="121">
                             <use href="./images/sprites.svg#10"></use>
                         </svg>
 
@@ -311,7 +311,7 @@
                         </div>
                     </li>
                     <li class="card__item card__item--brands">
-                        <svg class="hhh" width="140" height="121">
+                        <svg class="card__logo" width="140" height="121">
                             <use href="./images/sprites.svg#11"></use>
                         </svg>
                         <div class="card__body--brands">
