--- a/index.html
+++ b/index.html
@@ -298,35 +298,35 @@
             <div class="container">
                 <div class="separator"></div>
                 <h2 class="section__title">собственные марки</h2>
-                <ul class="card__list">
+                <ul class="card__list card__list--brands">
                     <li class="card__item card__item--brands">
-                        <svg class="card__logo" width="140" height="121">
+                        <svg class="card__logo" width="180" height="180">
                             <use href="./images/sprites.svg#10"></use>
                         </svg>
-
-                        <div class="card__body--brands">
-                            <h3 class="card__title">Автохимия AG-Tech</h3>
-                            <p class="card__description">Для современного мира разбавленное изрядной долей эмпатии,
-                                рациональное мышление создаёт предпосылки для поставленных обществом задач.</p>
-                        </div>
+                        <h3 class="card__title">Автохимия AG-Tech</h3>
+                        <p class="card__description">Для современного мира разбавленное изрядной долей эмпатии,
+                            рациональное мышление создаёт предпосылки для поставленных обществом задач.</p>
                     </li>
                     <li class="card__item card__item--brands">
-                        <svg class="card__logo" width="140" height="121">
+                        <svg class="card__logo" width="180" height="180">
                             <use href="./images/sprites.svg#11"></use>
                         </svg>
-                        <div class="card__body--brands">
-                            <h3 class="card__title">Автохимия AP</h3>
-                            <p class="card__description">Для современного мира разбавленное изрядной долей эмпатии,
-                                рациональное мышление создаёт предпосылки для поставленных обществом задач.</p>
-                        </div>
+                        <h3 class="card__title">Автохимия AP</h3>
+                        <p class="card__description">Для современного мира разбавленное изрядной долей эмпатии,
+                            рациональное мышление создаёт предпосылки для поставленных обществом задач.</p>
                     </li>
                 </ul>
             </div>
         </section>
-         <section class="section">
+        <section class="section">
             <div class="container">
                 <div class="separator"></div>
-             
+
+
+
+
+
+
 
             </div>
         </section>
