--- a/index.html
+++ b/index.html
@@ -120,9 +120,7 @@
             </div>
 
             <div class="swiper">
-                <!-- Additional required wrapper -->
                 <div class="swiper-wrapper header__features-list">
-                    <!-- Slides -->
                     <div class="swiper-slide header__features-item">
                         <svg class="header__features-svg" width="36" height="36">
                             <use href="./images/sprites.svg#1"></use>
@@ -154,7 +152,6 @@
                         <p class="header__features-text">Оперативное производство</p>
                     </div>
                 </div>
-                <!-- If we need navigation buttons -->
                 <div class="slider__buttons">
                     <div class="slider-button-prev">
                         <svg width="36" height="24">
@@ -186,7 +183,7 @@
                                 <p class="steps__text">Безусловно, сплочённость команды профессионалов позволяет
                                     оценить
                                     значение форм воздействия.</p>
-                                <a href="./" class="steps__link">Оставить заявку</a>
+                                <a href="./" class="button__link button__link--steps">Оставить заявку</a>
                             </div>
                         </div>
                         <div class="steps__item swiper-slide">
@@ -216,7 +213,6 @@
                         </div>
                     </div>
                 </div>
-                <!-- If we need navigation buttons -->
                 <div class="slider__steps-buttons">
                     <div class="slider__steps-button--prev">
                         <svg width="30" height="20">
@@ -318,16 +314,33 @@
                 </ul>
             </div>
         </section>
-        <section class="section">
+        <section class="section founder">
+            <img src="./images/founder-bg.jpg" alt="" class="founder__photo" loading="lazy">
             <div class="container">
-                <div class="separator"></div>
-
-
-
-
-
-
-
+                <div class="founder__content-wrapper">
+                    <div class="founder__content">
+                        <div class="separator"></div>
+                        <h2 class="section__title founder__title">Отношение к делу<br>и к клиентам</h2>
+                        <p class="founder__text">
+                            Кстати, интерактивные прототипы описаны максимально подробно. Повседневная практика
+                            показывает,
+                            что укрепление и развитие внутренней структуры говорит о возможностях соответствующих
+                            условий
+                            активизации. Внезапно, независимые государства, которые представляют собой яркий пример
+                            континентально-европейского типа политической культуры, будут подвергнуты целой серии
+                            независимых исследований. С учётом сложившейся международной обстановки, синтетическое
+                            тестирование выявляет срочную потребность системы массового участия.
+                        </p>
+                        <p class="founder__text">
+                            А ещё действия представителей оппозиции, превозмогая сложившуюся непростую экономическую
+                            ситуацию, в равной степени предоставлены сами себе. Не следует, однако, забывать, что
+                            выбранный
+                            нами инновационный путь в значительной степени обусловливает важность дальнейших направлений
+                            развития.
+                        </p>
+                        <a href="./" class="button__link button__link--founder">Подробнее о компании</a>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
