--- a/index.html
+++ b/index.html
@@ -16,40 +16,40 @@
         <nav class="mobile__menu" aria-label="Мобильное меню">
             <div class="mobile__menu-inner">
                 <ul class="mobile__menu-list">
-                    <li class="mobile__menu-item"><a href="" class="mobile__menu-link">О компании</a></li>
-                    <li class="mobile__menu-item"><a href="" class="mobile__menu-link">Контрактное производство</a>
+                    <li class="mobile__menu-item"><a href="#" class="mobile__menu-link">О компании</a></li>
+                    <li class="mobile__menu-item"><a href="#" class="mobile__menu-link">Контрактное производство</a>
                         <ul class="mobile__submenu-list">
-                            <li class="mobile__submenu-item"><a href="" class="mobile__submenu-link">Автомобильная
+                            <li class="mobile__submenu-item"><a href="#" class="mobile__submenu-link">Автомобильная
                                     химия</a>
                             </li>
-                            <li class="mobile__submenu-item"><a href="" class="mobile__submenu-link">Бытовая химия</a>
+                            <li class="mobile__submenu-item"><a href="#" class="mobile__submenu-link">Бытовая химия</a>
                             </li>
-                            <li class="mobile__submenu-item"><a href=""
+                            <li class="mobile__submenu-item"><a href="#"
                                     class="mobile__submenu-link">Дезинфицирующие&nbsp;средства</a>
                             </li>
-                            <li class="mobile__submenu-item"><a href="" class="mobile__submenu-link">Пищевые
+                            <li class="mobile__submenu-item"><a href="#" class="mobile__submenu-link">Пищевые
                                     аэрозоли</a>
                             </li>
-                            <li class="mobile__submenu-item"><a href="" class="mobile__submenu-link">Косметическая
+                            <li class="mobile__submenu-item"><a href="#" class="mobile__submenu-link">Косметическая
                                     продукция</a>
                             </li>
-                            <li class="mobile__submenu-item"><a href="" class="mobile__submenu-link">Краски
+                            <li class="mobile__submenu-item"><a href="#" class="mobile__submenu-link">Краски
                                     аэрозольные</a>
                             </li>
                         </ul>
                     </li>
-                    <li class="mobile__menu-item"><a href="" class="mobile__menu-link">Собственные марки</a>
+                    <li class="mobile__menu-item"><a href="#" class="mobile__menu-link">Собственные марки</a>
                         <ul class="mobile__submenu-list">
-                            <li class="mobile__submenu-item"><a href="" class="mobile__submenu-link">Автохимия
+                            <li class="mobile__submenu-item"><a href="#" class="mobile__submenu-link">Автохимия
                                     AG-Tech</a>
                             </li>
-                            <li class="mobile__submenu-item"><a href="" class="mobile__submenu-link">Автохимия AP</a>
+                            <li class="mobile__submenu-item"><a href="#" class="mobile__submenu-link">Автохимия AP</a>
                             </li>
 
                         </ul>
                     </li>
-                    <li class="mobile__menu-item"><a href="" class="mobile__menu-link">Новости</a></li>
-                    <li class="mobile__menu-item"><a href="" class="mobile__menu-link">Контакты</a></li>
+                    <li class="mobile__menu-item"><a href="#" class="mobile__menu-link">Новости</a></li>
+                    <li class="mobile__menu-item"><a href="#" class="mobile__menu-link">Контакты</a></li>
                 </ul>
             </div>
             <hr class="mobile__separator">
@@ -87,13 +87,13 @@
                 </svg>
             </a>
             <ul class="header__navigation-list">
-                <li class="header__navigation-item"><a href="" class="header__navigation-link">О&nbsp;компании</a></li>
-                <li class="header__navigation-item"><a href="" class="header__navigation-link">Контрактное
+                <li class="header__navigation-item"><a href="#" class="header__navigation-link">О&nbsp;компании</a></li>
+                <li class="header__navigation-item"><a href="#" class="header__navigation-link">Контрактное
                         производство</a></li>
-                <li class="header__navigation-item"><a href="" class="header__navigation-link">Собственные торговые
+                <li class="header__navigation-item"><a href="#" class="header__navigation-link">Собственные торговые
                         марки</a></li>
-                <li class="header__navigation-item"><a href="" class="header__navigation-link">Новости</a></li>
-                <li class="header__navigation-item"><a href="" class="header__navigation-link">Контакты</a></li>
+                <li class="header__navigation-item"><a href="#" class="header__navigation-link">Новости</a></li>
+                <li class="header__navigation-item"><a href="#" class="header__navigation-link">Контакты</a></li>
             </ul>
 
             <div class="header__contacts">
@@ -315,7 +315,7 @@
             </div>
         </section>
         <section class="section founder">
-            <img src="./images/founder-bg.jpg" alt="" class="founder__photo" loading="lazy">
+            <img src="./images/founder-bg.jpg" alt="founder__photo" class="founder__photo" loading="lazy">
             <div class="container">
                 <div class="founder__content-wrapper">
                     <div class="founder__content">
@@ -343,6 +343,106 @@
                 </div>
             </div>
         </section>
+        <section class="section clients">
+            <div class="container">
+                <div class="separator"></div>
+                <div class="clients__wrapper">
+                    <div class="clients__content">
+                        <h2 class="section__title clients__title">Производим аэрозольную продукцию для разных сфер</h2>
+                        <ul class="clients__list">
+                            <li class="clients__item">
+                                <svg class="clients__icon" width="30" height="30">
+                                    <use href="./images/sprites.svg#20"></use>
+                                </svg>
+                                <span class="clients__text">Химические производства</span>
+                            </li>
+                            <li class="clients__item">
+                                <svg class="clients__icon" width="30" height="30">
+                                    <use href="./images/sprites.svg#21"></use>
+                                </svg>
+                                <span class="clients__text">Автомойки</span>
+                            </li>
+                            <li class="clients__item">
+                                <svg class="clients__icon" width="30" height="30">
+                                    <use href="./images/sprites.svg#22"></use>
+                                </svg>
+                                <span class="clients__text">Пищевая продукция</span>
+                            </li>
+                            <li class="clients__item">
+                                <svg class="clients__icon" width="30" height="30">
+                                    <use href="./images/sprites.svg#23"></use>
+                                </svg>
+                                <span class="clients__text">Лаки и краски</span>
+                            </li>
+                            <li class="clients__item">
+                                <svg class="clients__icon" width="30" height="30">
+                                    <use href="./images/sprites.svg#24"></use>
+                                </svg>
+                                <span class="clients__text">Косметические средства</span>
+                            </li>
+                            <li class="clients__item">
+                                <svg class="clients__icon" width="30" height="30">
+                                    <use href="./images/sprites.svg#25"></use>
+                                </svg>
+                                <span class="clients__text">Автомобильная косметика</span>
+                            </li>
+                            <li class="clients__item">
+                                <svg class="clients__icon" width="30" height="30">
+                                    <use href="./images/sprites.svg#26"></use>
+                                </svg>
+                                <span class="clients__text">Косметика по уходу за одеждой</span>
+                            </li>
+                            <li class="clients__item">
+                                <svg class="clients__icon" width="30" height="30">
+                                    <use href="./images/sprites.svg#27"></use>
+                                </svg>
+                                <span class="clients__text">Косметика по уходу за обувью</span>
+                            </li>
+                            <li class="clients__item">
+                                <svg class="clients__icon" width="30" height="30">
+                                    <use href="./images/sprites.svg#28"></use>
+                                </svg>
+                                <span class="clients__text">Строительные материалы</span>
+                            </li>
+                            <li class="clients__item">
+                                <svg class="clients__icon" width="30" height="30">
+                                    <use href="./images/sprites.svg#29"></use>
+                                </svg>
+                                <span class="clients__text">И многих других</span>
+                            </li>
+                        </ul>
+                    </div>
+                    <ul class="clients-logo__list">
+                        <li class="clients-logo__item card__item"> 
+                            <img class="clients__logo-image" src="./images/clients-icon-1.png" alt="" width="69" height="70">
+                        </li>
+                        <li class="clients-logo__item card__item">
+                                    <img class="clients__logo-image" src="./images/clients-icon-1.png" alt="" width="69" height="70">
+                        </li>
+                        <li class="clients-logo__item card__item">
+                                    <img class="clients__logo-image" src="./images/clients-icon-1.png" alt="" width="69" height="70">
+                        </li>
+                        <li class="clients-logo__item card__item">
+                                    <img class="clients__logo-image" src="./images/clients-icon-1.png" alt="" width="69" height="70">
+                        </li>
+                        <li class="clients-logo__item card__item">
+                                    <img class="clients__logo-image" src="./images/clients-icon-1.png" alt="" width="69" height="70">
+                        </li>
+                        <li class="clients-logo__item card__item">
+                                    <img class="clients__logo-image" src="./images/clients-icon-1.png" alt="" width="69" height="70">
+                        </li>
+                        <li class="clients-logo__item card__item">
+                                    <img class="clients__logo-image" src="./images/clients-icon-1.png" alt="" width="69" height="70">
+                        </li>
+                        <li class="clients-logo__item card__item">
+                                    <img class="clients__logo-image" src="./images/clients-icon-1.png" alt="" width="69" height="70">
+                        </li>
+                        <li class="clients-logo__item card__item">
+                                    <img class="clients__logo-image" src="./images/clients-icon-1.png" alt="" width="69" height="70">
+                        </li>
+                    </ul>
+                </div>
+        </section>
     </main>
     <script src="./src/swiper-bundle.min.js" defer></script>
     <script src="./src/index.js" defer></script>
@@ -350,3 +450,4 @@
 </body>
 
 </html>
+</div>
