added adaptive on clients section

--- a/index.html
+++ b/index.html
@@ -413,32 +413,32 @@
                         </ul>
                     </div>
                     <ul class="clients-logo__list">
-                        <li class="clients-logo__item card__item"> 
-                            <img class="clients__logo-image" src="./images/clients-icon-1.png" alt="" width="69" height="70">
+                        <li class="clients-logo__item"> 
+                            <img class="clients-logo__image" src="./images/clients-icon-1.png" alt="" width="70" height="70">
                         </li>
-                        <li class="clients-logo__item card__item">
-                                    <img class="clients__logo-image" src="./images/clients-icon-1.png" alt="" width="69" height="70">
+                        <li class="clients-logo__item">
+                                    <img class="clients-logo__image" src="./images/clients-icon-1.png" alt="" width="70" height="70">
                         </li>
-                        <li class="clients-logo__item card__item">
-                                    <img class="clients__logo-image" src="./images/clients-icon-1.png" alt="" width="69" height="70">
+                        <li class="clients-logo__item">
+                                    <img class="clients-logo__image" src="./images/clients-icon-1.png" alt="" width="70" height="70">
                         </li>
-                        <li class="clients-logo__item card__item">
-                                    <img class="clients__logo-image" src="./images/clients-icon-1.png" alt="" width="69" height="70">
+                        <li class="clients-logo__item">
+                                    <img class="clients-logo__image" src="./images/clients-icon-1.png" alt="" width="70" height="70">
                         </li>
-                        <li class="clients-logo__item card__item">
-                                    <img class="clients__logo-image" src="./images/clients-icon-1.png" alt="" width="69" height="70">
+                        <li class="clients-logo__item">
+                                    <img class="clients-logo__image" src="./images/clients-icon-1.png" alt="" width="70" height="70">
                         </li>
-                        <li class="clients-logo__item card__item">
-                                    <img class="clients__logo-image" src="./images/clients-icon-1.png" alt="" width="69" height="70">
+                        <li class="clients-logo__item">
+                                    <img class="clients-logo__image" src="./images/clients-icon-1.png" alt="" width="70" height="70">
                         </li>
-                        <li class="clients-logo__item card__item">
-                                    <img class="clients__logo-image" src="./images/clients-icon-1.png" alt="" width="69" height="70">
+                        <li class="clients-logo__item">
+                                    <img class="clients-logo__image" src="./images/clients-icon-1.png" alt="" width="70" height="70">
                         </li>
-                        <li class="clients-logo__item card__item">
-                                    <img class="clients__logo-image" src="./images/clients-icon-1.png" alt="" width="69" height="70">
+                        <li class="clients-logo__item">
+                                    <img class="clients-logo__image" src="./images/clients-icon-1.png" alt="" width="70" height="70">
                         </li>
-                        <li class="clients-logo__item card__item">
-                                    <img class="clients__logo-image" src="./images/clients-icon-1.png" alt="" width="69" height="70">
+                        <li class="clients-logo__item">
+                                    <img class="clients-logo__image" src="./images/clients-icon-1.png" alt="" width="70" height="70">
                         </li>
                     </ul>
                 </div>
