added blog section & adaptive. fix button hover

--- a/index.html
+++ b/index.html
@@ -213,18 +213,22 @@
                         </div>
                     </div>
                 </div>
-                <div class="slider__steps-buttons">
-                    <div class="slider__steps-button--prev">
-                        <svg width="30" height="20">
+                <div class="nav-arrows slider__steps-wrapper">
+                    <button
+                        class="nav-arrows__button nav-arrows__button--sm nav-arrows__button--prev js-slider-steps-prev">
+                        <svg class="arrow" width="30" height="20">
                             <use href="./images/sprites.svg#arrow-prev"></use>
                         </svg>
-                    </div>
-                    <div class="slider__steps-button--next">
-                        <svg width="30" height="20">
+                    </button>
+
+                    <button
+                        class="nav-arrows__button nav-arrows__button--sm nav-arrows__button--next js-slider-steps-next">
+                        <svg class="arrow" width="30" height="20">
                             <use href="./images/sprites.svg#arrow-next"></use>
                         </svg>
-                    </div>
+                    </button>
                 </div>
+
 
             </div>
         </section>
@@ -413,35 +417,100 @@
                         </ul>
                     </div>
                     <ul class="clients-logo__list">
-                        <li class="clients-logo__item"> 
-                            <img class="clients-logo__image" src="./images/clients-icon-1.png" alt="" width="70" height="70">
+                        <li class="clients-logo__item">
+                            <img class="clients-logo__image" src="./images/clients-icon-1.png" alt="" width="70"
+                                height="70">
                         </li>
                         <li class="clients-logo__item">
-                                    <img class="clients-logo__image" src="./images/clients-icon-1.png" alt="" width="70" height="70">
+                            <img class="clients-logo__image" src="./images/clients-icon-1.png" alt="" width="70"
+                                height="70">
                         </li>
                         <li class="clients-logo__item">
-                                    <img class="clients-logo__image" src="./images/clients-icon-1.png" alt="" width="70" height="70">
+                            <img class="clients-logo__image" src="./images/clients-icon-1.png" alt="" width="70"
+                                height="70">
                         </li>
                         <li class="clients-logo__item">
-                                    <img class="clients-logo__image" src="./images/clients-icon-1.png" alt="" width="70" height="70">
+                            <img class="clients-logo__image" src="./images/clients-icon-1.png" alt="" width="70"
+                                height="70">
                         </li>
                         <li class="clients-logo__item">
-                                    <img class="clients-logo__image" src="./images/clients-icon-1.png" alt="" width="70" height="70">
+                            <img class="clients-logo__image" src="./images/clients-icon-1.png" alt="" width="70"
+                                height="70">
                         </li>
                         <li class="clients-logo__item">
-                                    <img class="clients-logo__image" src="./images/clients-icon-1.png" alt="" width="70" height="70">
+                            <img class="clients-logo__image" src="./images/clients-icon-1.png" alt="" width="70"
+                                height="70">
                         </li>
                         <li class="clients-logo__item">
-                                    <img class="clients-logo__image" src="./images/clients-icon-1.png" alt="" width="70" height="70">
+                            <img class="clients-logo__image" src="./images/clients-icon-1.png" alt="" width="70"
+                                height="70">
                         </li>
                         <li class="clients-logo__item">
-                                    <img class="clients-logo__image" src="./images/clients-icon-1.png" alt="" width="70" height="70">
+                            <img class="clients-logo__image" src="./images/clients-icon-1.png" alt="" width="70"
+                                height="70">
                         </li>
                         <li class="clients-logo__item">
-                                    <img class="clients-logo__image" src="./images/clients-icon-1.png" alt="" width="70" height="70">
+                            <img class="clients-logo__image" src="./images/clients-icon-1.png" alt="" width="70"
+                                height="70">
                         </li>
                     </ul>
                 </div>
+        </section>
+        <section class="section blog">
+            <div class="container">
+                <div class="separator"></div>
+                <h2 class="section__title blog__title">Блог экспертов в области производства</h2>
+                <div class="swiper swiper__blog">
+                    <div class="swiper-wrapper">
+                        <a href="#" class="swiper-slide blog-card">
+                            <h3 class="blog-card__title">Современная методология разработки одухотворила всех причастных
+                            </h3>
+                            <p class="blog-card__description">Действия представителей оппозиции, превозмогая сложившуюся
+                                непростую экономическую ситуацию, в равной степени предоставлены...</p>
+                            <img src="./images/blog/1.jpg" alt="" class="blog-card__image">
+                        </a>
+                        <a href="#" class="swiper-slide blog-card">
+                            <h3 class="blog-card__title">Сложно сказать, почему жизнь прекрасна
+                            </h3>
+                            <p class="blog-card__description">Сложно сказать, почему элементы политического процесса
+                                функционально разнесены на независимые элементы. Безусловно, высокотехнологичная...</p>
+                            <img src="./images/blog/2.jpg" alt="" class="blog-card__image">
+                        </a>
+                        <a href="#" class="swiper-slide blog-card">
+                            <h3 class="blog-card__title">Сложно сказать, почему жизнь прекрасна
+                            </h3>
+                             <p class="blog-card__description">Сложно сказать, почему элементы политического процесса
+                                функционально разнесены на независимые элементы. Безусловно, высокотехнологичная...</p>
+                            <img src="./images/blog/1.jpg" alt="" class="blog-card__image">
+                        </a>
+                        <a href="#" class="swiper-slide blog-card">
+                             <h3 class="blog-card__title">Современная методология разработки одухотворила всех причастных
+                            </h3>
+                            <p class="blog-card__description">Действия представителей оппозиции, превозмогая сложившуюся
+                                непростую экономическую ситуацию, в равной степени предоставлены...</p>
+                            <img src="./images/blog/2.jpg" alt="" class="blog-card__image">
+                        </a>
+                    </div>
+                    <div class="blog-card__footer">
+                        <a href="./" class="button__link button__link--blog">Весь блог</a>
+                        <div class="nav-arrows slider__blog-wrapper">
+                            <button
+                                class="nav-arrows__button nav-arrows__button--lg nav-arrows__button--prev js-slider-blog-prev">
+                                <svg class="nav-arrows__icon">
+                                    <use href="./images/sprites.svg#arrow-prev"></use>
+                                </svg>
+                            </button>
+
+                            <button
+                                class="nav-arrows__button nav-arrows__button--lg nav-arrows__button--next  js-slider-blog-next">
+                                <svg class="nav-arrows__icon">
+                                    <use href="./images/sprites.svg#arrow-next"></use>
+                                </svg>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <script src="./src/swiper-bundle.min.js" defer></script>
