--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                                 значение форм воздействия.</p>
                         </div>
                         <img class="card__image" src="./images/cards-image/1.png" alt="Автомобильная химия" width="478"
-                            height="300">
+                            height="300" loading="lazy">
                     </li>
                     <li class="card__item card__item--product">
                         <div class="card__body">
@@ -254,7 +254,7 @@
                                 нанотехнологии функционально разнесены на независимые элементы.</p>
                         </div>
                         <img class="card__image" src="./images/cards-image/2.png" alt="Бытовая химия" width="478"
-                            height="300">
+                            height="300" loading="lazy">
                     </li>
                     <li class="card__item card__item--product">
                         <div class="card__body">
@@ -262,7 +262,7 @@
                             <p class="card__description">Лишь интерактивные прототипы призваны к ответу.</p>
                         </div>
                         <img class="card__image" src="./images/cards-image/3.png" alt="Дезинфицирующие средства"
-                            width="478" height="300">
+                            width="478" height="300" loading="lazy">
                     </li>
                     <li class="card__item card__item--product">
                         <div class="card__body">
@@ -272,7 +272,7 @@
                                 значение форм воздействия.</p>
                         </div>
                         <img class="card__image" src="./images/cards-image/3.png" alt="Пищевые аэрозоли" width="478"
-                            height="300">
+                            height="300" loading="lazy">
                     </li>
                     <li class="card__item card__item--product">
                         <div class="card__body">
@@ -280,7 +280,7 @@
                             <p class="card__description">Лишь интерактивные прототипы призваны к ответу.</p>
                         </div>
                         <img class="card__image" src="./images/cards-image/4.png" alt="Косметическая продукция"
-                            width="478" height="300">
+                            width="478" height="300" loading="lazy">
                     </li>
                     <li class="card__item card__item--product">
                         <div class="card__body">
@@ -289,7 +289,7 @@
                                 нанотехнологии функционально разнесены на независимые элементы.</p>
                         </div>
                         <img class="card__image" src="./images/cards-image/5.png" alt="Краски аэрозольные" width="478"
-                            height="300">
+                            height="300" loading="lazy">
                     </li>
                 </ul>
             </div>
@@ -455,6 +455,7 @@
                         </li>
                     </ul>
                 </div>
+            </div>
         </section>
         <section class="section blog">
             <div class="container">
@@ -467,28 +468,28 @@
                             </h3>
                             <p class="blog-card__description">Действия представителей оппозиции, превозмогая сложившуюся
                                 непростую экономическую ситуацию, в равной степени предоставлены...</p>
-                            <img src="./images/blog/1.jpg" alt="" class="blog-card__image">
+                            <img src="./images/blog/1.jpg" alt="" class="blog-card__image" loading="lazy">
                         </a>
                         <a href="#" class="swiper-slide blog-card">
                             <h3 class="blog-card__title">Сложно сказать, почему жизнь прекрасна
                             </h3>
                             <p class="blog-card__description">Сложно сказать, почему элементы политического процесса
                                 функционально разнесены на независимые элементы. Безусловно, высокотехнологичная...</p>
-                            <img src="./images/blog/2.jpg" alt="" class="blog-card__image">
+                            <img src="./images/blog/2.jpg" alt="" class="blog-card__image" loading="lazy">
                         </a>
                         <a href="#" class="swiper-slide blog-card">
                             <h3 class="blog-card__title">Сложно сказать, почему жизнь прекрасна
                             </h3>
-                             <p class="blog-card__description">Сложно сказать, почему элементы политического процесса
+                            <p class="blog-card__description">Сложно сказать, почему элементы политического процесса
                                 функционально разнесены на независимые элементы. Безусловно, высокотехнологичная...</p>
-                            <img src="./images/blog/1.jpg" alt="" class="blog-card__image">
+                            <img src="./images/blog/1.jpg" alt="" class="blog-card__image" loading="lazy">
                         </a>
                         <a href="#" class="swiper-slide blog-card">
-                             <h3 class="blog-card__title">Современная методология разработки одухотворила всех причастных
+                            <h3 class="blog-card__title">Современная методология разработки одухотворила всех причастных
                             </h3>
                             <p class="blog-card__description">Действия представителей оппозиции, превозмогая сложившуюся
                                 непростую экономическую ситуацию, в равной степени предоставлены...</p>
-                            <img src="./images/blog/2.jpg" alt="" class="blog-card__image">
+                            <img src="./images/blog/2.jpg" alt="" class="blog-card__image" loading="lazy">
                         </a>
                     </div>
                     <div class="blog-card__footer">
@@ -512,6 +513,40 @@
                 </div>
             </div>
         </section>
+        <section class="section cta">
+            <div class="background-grey section__cta">
+                <img class="cta__image" src="./images/cta-img.png" alt="" loading="lazy">
+                <div class="cta__form-wrapper container">
+                    <form action="#" class="cta__form">
+                        <h2 class="section__title cta__title">Хотите сотрудничать?</h2>
+                        <p class="cta__description">Оставьте заявку, наш менеджер свяжется с Вами в ближайшее время
+                            ответит на все интересующие вопросы и поможем даже в самых сложных случаях!</p>
+                        <div class="input__group-wrapper">
+                            <div class="input__group">
+                                <input type="text" class="input__group-input" id="user-name" placeholder="">
+                                <label class="input__group-label">Имя</label>
+                            </div>
+                            <div class="input__group">
+                                <input id="user-phone" type="tel" class="input__group-input" placeholder="">
+                                <label class="input__group-label" for="user-phone">Номер телефона</label>
+                            </div>
+                        </div>
+                        <div class="cta__form-footer">
+                            <button type="submit" class="button button--cta">Отправить заявку</button>
+                            <div class="notify">
+                                <svg class="notify__icon" width="14" height="14">
+                                    <use href="./images/sprites.svg#notify-icon"></use>
+                                </svg>
+                                <p class="cta__form-notify">
+                                    Обращаясь к нам вы получаете не только профессиональную работу, но и абсолютную
+                                    конфиденциальность информации!
+                                </p>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </section>
     </main>
     <script src="./src/swiper-bundle.min.js" defer></script>
     <script src="./src/index.js" defer></script>
@@ -519,4 +554,3 @@
 </body>
 
 </html>
-</div>
