--- a/index.html
+++ b/index.html
@@ -52,18 +52,26 @@
                     <li class="mobile__menu-item"><a href="#" class="mobile__menu-link">Контакты</a></li>
                 </ul>
             </div>
-            <hr class="mobile__separator">
+            <hr class="divider-line divider-line--mobile">
             <footer class="mobile__menu-footer">
-                <a class="mobile__menu-phone" href="tel:+74996861014">+7 (499) 686-10-14</a>
-                <address class="mobile__menu-address">
-                    <a href="#" class="mobile__menu-address-link"><img src="./images/icon-mobile/navigation-licon.svg"
-                            alt=""><span>г. Москва, Холодильный пер. 4к1с8</span></a>
-                    <a href="mailto:a.dragunov@tdaliance.ru" class="mobile__menu-address-link"><img
-                            src="./images/icon-mobile/mail-icon.svg" alt=""><span>a.dragunov@tdaliance.ru</span></a>
-                </address>
-                <div class="footer__soc1als">
-                    <a href="#"><img src="./images/icon-mobile/vk-icon.svg" alt="ВКонтакте"></a>
-                    <a href="#"><img src="./images/icon-mobile/instagramm-icon.svg" alt="Instagram"></a>
+                <div class="contacts contacts--mobile">
+                    <a class="contacts__phone" href="tel:+74996861014">+7 (499) 686-10-14</a>
+                    <address class="contacts__list">
+                        <a class="contacts__item" href="#">
+                            <img class="contacts__icon" src="./images/icon-mobile/navigation-licon.svg" alt="">
+                            <span class="contacts__text">г. Москва, Холодильный пер. 4к1с8</span>
+                        </a>
+
+                        <a class="contacts__item" href="mailto:a.dragunov@tdaliance.ru">
+                            <img class="contacts__icon" src="./images/icon-mobile/mail-icon.svg" alt="">
+                            <span class="contacts__text">a.dragunov@tdaliance.ru</span>
+                        </a>
+                    </address>
+
+                    <div class="socials socials--mobile">
+                        <a href="#"><img src="./images/icon-mobile/vk-icon.svg" alt="ВКонтакте"></a>
+                        <a href="#"><img src="./images/icon-mobile/instagramm-icon.svg" alt="Instagram"></a>
+                    </div>
                 </div>
             </footer>
         </nav>
@@ -524,7 +532,7 @@
                         <div class="input__group-wrapper">
                             <div class="input__group">
                                 <input type="text" class="input__group-input" id="user-name" placeholder="">
-                                <label class="input__group-label">Имя</label>
+                                <label class="input__group-label" for="user-name">Имя</label>
                             </div>
                             <div class="input__group">
                                 <input id="user-phone" type="tel" class="input__group-input" placeholder="">
@@ -548,9 +556,89 @@
             </div>
         </section>
     </main>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__top">
+                <svg class="logo__svg--dark logo__svg-footer" width="200" height="63">
+                    <use href="./images/sprites.svg#logo-dark"></use>
+                </svg>
+                <div class="contacts footer__contacts  ">
+                    <a class="contacts__phone footer__phone" href="tel:+74996861014">+7 (499) 686-10-14</a>
+                    <address class="footer__address">
+                        <a class="contacts__item" href="#">
+                            <img class="contacts__icon" src="./images/icon-mobile/navigation-licon.svg" alt="">
+                            <span class="contacts__text footer__text">г. Москва, Холодильный пер. 4к1с8</span>
+                        </a>
+
+                        <a class="contacts__item" href="mailto:a.dragunov@tdaliance.ru">
+                            <img class="contacts__icon" src="./images/icon-mobile/mail-icon.svg" alt="">
+                            <span class="contacts__text footer__text">a.dragunov@tdaliance.ru</span>
+                        </a>
+                    </address>
+
+                    <div class="socials socials--mobile">
+                        <a href="#"><img src="./images/icon-mobile/vk-icon.svg" alt="ВКонтакте"></a>
+                        <a href="#"><img src="./images/icon-mobile/instagramm-icon.svg" alt="Instagram"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <hr class="divider-line divider-line--footer">
+        <div class="container">
+            <div class="footer__bottom">
+                <div class="footer__menu-wrapper">
+                    <h2 class="footer__menu-title">Контрактное производство</h2>
+                    <ul class="footer__menu-list footer__menu--2cols">
+                        <li class="footer__menu-item"><a href="#" class="footer__menu-link">Автомобильная химия</a></li>
+                        <li class="footer__menu-item"><a href="#" class="footer__menu-link">Бытовая химия</a></li>
+                        <li class="footer__menu-item"><a href="#" class="footer__menu-link">Дезинфицирующие средства</a>
+                        </li>
+                        <li class="footer__menu-item"><a href="#" class="footer__menu-link">Пищевые аэрозоли</a></li>
+                        <li class="footer__menu-item"><a href="#" class="footer__menu-link">Косметическая продукция</a>
+                        </li>
+                        <li class="footer__menu-item"><a href="#" class="footer__menu-link">Краски аэрозольные</a></li>
+                    </ul>
+                </div>
+                <div class="footer__menu-wrapper">
+                    <h2 class="footer__menu-title">Собственные марки</h2>
+                    <ul class="footer__menu-list footer__menu-list--1col">
+                        <li class="footer__menu-item"><a href="#" class="footer__menu-link">Автохимия AG-Tech</a></li>
+                        <li class="footer__menu-item"><a href="#" class="footer__menu-link">Автохимия AP</a></li>
+                    </ul>
+                </div>
+                <div class="footer__menu-wrapper">
+                    <ul class="footer__menu-list footer__menu-list--bold footer__menu-list--1col">
+                        <li class="footer__menu-item"><a href="#" class=" footer__menu-link footer__menu-link--bold">О
+                                компании</a></li>
+                        <li class="footer__menu-item"><a href="#"
+                                class="footer__menu-link footer__menu-link--bold">Новости</a></li>
+                        <li class="footer__menu-item"><a href="#"
+                                class="footer__menu-link footer__menu-link--bold">Контакты</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <hr class="divider-line divider-line--footer">
+        <div class="container">
+            <div class="footer__wrapper">
+                <div class="footer__legal">
+                    <p class="footer__copyright">&#169; 2022 «Aliance Production». Все права защищены.</p>
+                    <a href="#" class="footer__policy">Политики конфиденциальности</a>
+                </div>
+
+
+                <div class="footer__author">
+                    <span class="footer__made-in">Сделано в
+                    </span>
+                    <svg width="52" height="11">
+                        <use href="./images/sprites.svg#ruso"></use>
+                    </svg>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="./src/swiper-bundle.min.js" defer></script>
     <script src="./src/index.js" defer></script>
-
 </body>
 
 </html>
