--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 </svg>
                 <a class="header__contacts-link" href="tel:+74996861014">+7 (499) 686-10-14</a>
             </div>
-            <button class="header__nav-button button">
+            <button class="header__nav-button button" data-js-header-modal-button>
                 <svg class="header__contacts-icon" width="24" height="24">
                     <use href="./images/sprites.svg#phone-icon"></use>
                 </svg>
@@ -124,7 +124,7 @@
                 <p class="header__text">Высокий уровень вовлечения представителей целевой аудитории является четким
                     доказательством простого факта: высококачественный прототип будущего проекта напрямую зависит от
                     анализа существующих паттернов поведения.</p>
-                <a href="./" class="button header__button">Подробнее о компании</a>
+                <a href="./" class="button header__button" data-js-header-modal-button>Подробнее о компании</a>
             </div>
 
             <div class="swiper">
@@ -536,7 +536,8 @@
                             </div>
                             <div class="input__group">
                                 <input id="user-phone" type="tel" class="input__group-input" placeholder="">
-                                <label class="input__group-label" for="user-phone">Номер телефона</label>
+                                <label class="input__group-label" for="user-phone">Номер
+                                    телефона</label>
                             </div>
                         </div>
                         <div class="cta__form-footer">
@@ -637,6 +638,44 @@
             </div>
         </div>
     </footer>
+    <div class="modal">
+        <div class="modal__dialog">
+            <h2 class="modal__title">Есть вопросы?</h2>
+            <button class="modal__close-button" type="button" data-js-header-close-modal-button>
+                <svg width="18" height="18">
+                    <use href="./images/sprites.svg#closeButton"></use>
+                </svg>
+            </button>
+            <p class="modal__text">Оставьте заявку, наш менеджер свяжется с Вами в ближайшее время ответит на все
+                интересующие вопросы и поможем даже в самых сложных случаях!</p>
+            <form action="" class="modal__form">
+                <div class="input__group-wrapper input__group-wrapper--vertical">
+                    <div class="input__group input__group--modal">
+                        <input type="text" class="input__group-input input__group-input--modal" id="user-name-modal"
+                            placeholder="">
+                        <label class="input__group-label input__group-label--modal" for="user-name-modal">Имя</label>
+                    </div>
+                    <div class="input__group input__group--modal">
+                        <input id="user-phone-modal" type="tel" class="input__group-input input__group-input--modal"
+                            placeholder="">
+                        <label class="input__group-label input__group-label--modal" for="user-phone-modal">Номер телефона</label>
+                    </div>
+                </div>
+                <div class="cta__form-footer cta__form-footer--vertical">
+                    <button type="submit" class="button button--cta button-modal">Отправить заявку</button>
+                    <div class="notify">
+                        <svg class="notify__icon" width="14" height="14">
+                            <use href="./images/sprites.svg#notify-icon"></use>
+                        </svg>
+                        <p class="cta__form-notify">
+                            Обращаясь к нам вы получаете не только профессиональную работу, но и абсолютную
+                            конфиденциальность информации!
+                        </p>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
     <script src="./src/swiper-bundle.min.js" defer></script>
     <script src="./src/index.js" defer></script>
 </body>
